# MLisp

./: .gitignore  .ocamlinit  LICENSE  MLisp.opam  Makefile  README.md  dune-project
lib/: MLisp.ml  dune
test/: core_functions_tests.ml  dune  extra_tests.ml  float_tests.ml  refactor_tests.ml  tests.ml
test/diff-tests/: diff_tests.ml  dune  lis.py
test/generated-tests/: dune  generated_tests.ml
test/unit-tests/: dune  unit_tests.ml
